stub_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http2-server
spec:
  selector:
    matchLabels:
      app: http-server  
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      labels:
        app: http-server
    spec:
      containers:
      - name: python37-http2-nf-server
        image: "registry.cloud.okteto.net/saikrishnaa97/http-stub-server:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
        - containerPort: 8000
          name: metrics
        - containerPort: 8443
          name: https
      restartPolicy: Always
