stub_svc.yaml
apiVersion: extensions/v1beta1
kind: Service
apiVersion: v1
metadata:
  annotations:
    dev.okteto.com/auto-ingress: "true"
  name: "notify-stub-service"
spec:
  selector:
    app: "http-server"
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http2
  - protocol: TCP
    port: 8091
    targetPort: 8000
    name: metrics
  - protocol: TCP
    port: 8443
    targetPort: 8443
    name: application-https
