ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    dev.okteto.com/generate-host: "true"
  name: notify-stub-service
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: notify-stub-service
          servicePort: 8080
        path: /
